# decima8

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/: FUNDING.yml
docs/: CONTRACT_en.md  CONTRACT_ru.md  CONTRACT_zh.md
examples/: bake_roundtrip.cpp  ide_inprocess.cpp  vsb_tape_gen.cpp
include/d8/: bake.hpp  swarm_core.hpp
src/: bake.cpp  crc32_ieee.cpp  swarm.cpp  tlv.cpp
tests/: test_bake.cpp  test_determinism.cpp  test_main.cpp  test_swarm.cpp
